--- a/testimonial-grid/index.html
+++ b/testimonial-grid/index.html
@@ -12,57 +12,57 @@
         <section class="grid-main">
             <div class="grid1 light-text">
                 <div class="user">
-                    <img src="./img/image-daniel.jpg" alt="Daniel">
-                    <div class="user-info">
+                    <img class="user__img--light-text" src="./img/image-daniel.jpg" alt="Daniel">
+                    <div class="user__info">
                         <h2 class="light-text__name">Daniel Clifford</h2>
                         <h3 class="light-text__verified">Verified Graduate</h3>
                     </div>
                 </div>
-                <p>I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</p>
+                <p class="light-text__summary">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</p>
                 <q class="light-text__quote"> I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. </q>
             </div>
             <div class="grid2 light-text">
                 <div class="user">
-                    <img src="./img/image-jonathan.jpg" alt="Jonathan">
-                    <div class="user-info">
+                    <img class="user__img--light-text" src="./img/image-jonathan.jpg" alt="Jonathan">
+                    <div class="user__info">
                         <h2 class="light-text__name">Jonathan Walters</h2>
                         <h3 class="light-text__verified">Verified Graduate</h3>
                     </div>    
                 </div>
-                <p>The team was very supportive and kept me motivated</p>
+                <p class="light-text__summary">The team was very supportive and kept me motivated</p>
                 <q class="light-text__quote"> I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. </q>
             </div>
             <div class="grid3 dark-text">
                 <div class="user">
-                    <img src="./img/image-kira.jpg" alt="Kira">
-                    <div class="user-info">
+                    <img class="user__img--dark-text" src="./img/image-kira.jpg" alt="Kira">
+                    <div class="user__info">
                         <h2 class="dark-text__name">Kira Whittle</h2>
                         <h3 class="dark-text__verified">Verified Graduate</h3>
                     </div>
                 </div>
-                <p>Such a life-changing experience. Highly recommended!</p>
+                <p class="dark-text__summary">Such a life-changing experience. Highly recommended!</p>
                 <q class="dark-text__quote"> Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! </q>
             </div>
             <div class="grid4 dark-text">
                 <div class="user">
-                    <img src="./img/image-jeanette.jpg" alt="Jeanette">
-                    <div class="user-info">
+                    <img class="user__img--dark-text" src="./img/image-jeanette.jpg" alt="Jeanette">
+                    <div class="user__info">
                         <h2 class="dark-text__name">Jeanette Harmon</h2>
                         <h3 class="dark-text__verified">Verified Graduate</h3>
                     </div>
                 </div>
-                <p>An overall wonderful and rewarding experience</p>
+                <p class="dark-text__summary">An overall wonderful and rewarding experience</p>
                 <q class="dark-text__quote"> Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. </q>
             </div>
             <div class="grid5 light-text">
                 <div class="user">
-                    <img src="./img/image-patrick.jpg" alt="Patrick">
-                    <div class="user-info">
+                    <img class="user__img--light-text" src="./img/image-patrick.jpg" alt="Patrick">
+                    <div class="user__info">
                         <h2 class="light-text__name">Patrick Abrams</h2>
                         <h3 class="light-text__verified">Verified Graduate</h3>
                     </div>
                 </div>
-                <p>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</p>
+                <p class="light-text__summary">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</p>
                 <q class="light-text__quote"> The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. </q>
             </div>
         </section>
